--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.nibernate.dialect =org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
+
+spring.servlet.multipart.max-file-size =10MB
+spring.servlet.multipart.max-request-size=10MB
+
+project.image =images/
