--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.servlet.multipart.max-file-size =10MB
 spring.servlet.multipart.max-request-size=10MB
 
 project.image =images/
+
+spring.security.user.name=Ravi
+spring.security.user.password==Ravi
+spring.security.user.roles==ADMIN
